z-index fixed

--- a/src/assets/sass/style.sass
+++ b/src/assets/sass/style.sass
@@ -30,8 +30,6 @@ body
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2) 1%, transparent 1px), linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 1%, transparent 1px)
   background-size: var(--grid-size) var(--grid-size)
 
-
-
   *
     user-select: none
 
@@ -85,7 +83,7 @@ body
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1)
   font-family: Arial, sans-serif
   font-size: 14px
-  z-index: 1000
+  z-index: 15
   display: flex
   flex-direction: column
 
@@ -156,7 +154,7 @@ body
     padding: 0
     margin: 0
     min-width: 200px
-    z-index: 1000
+    z-index: 20
 
     li 
       padding: 10px
@@ -201,7 +199,7 @@ body
     padding: 0
     margin: 0
     min-width: 200px
-    z-index: 1000
+    z-index: 20
 
     li 
       display: flex
@@ -228,6 +226,7 @@ body
   display: none
   justify-content: center
   align-items: center
+  z-index: 25
   *
     user-select: none
     font-size: 18px
